updated job search result to recursively call job-find-show component

--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.css
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.css
@@ -8,12 +8,24 @@
     grid-template-columns: 100%;
 }
 
+.flex { 
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
 .border{
     border: solid;
 }
 
 .white-text{
     color: white;
+}
+
+.set-width{
+    width: 233.3px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h3{
