--- a/frontend/src/app/job/job-edit/job-edit.component.html
+++ b/frontend/src/app/job/job-edit/job-edit.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="!canInput">
-  <h1>You must be logged in to add a job lot!</h1>
-</div>
-
 <form *ngIf="canInput && editJobForm" [formGroup]="editJobForm" (ngSubmit)='onSubmit()' >
   <h4><strong>Job# {{jobNum}}, Part# {{job.partNumber}}</strong></h4>
   <div class="form-group">
@@ -77,3 +73,4 @@
       Cancel
     </button>
   </div>
+</form>
