--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
@@ -46,7 +46,7 @@
 
     <div>
       <h4> Operations </h4>
-      <app-job-ops-show [operation]="oneJob.jobNumber"></app-job-ops-show>
+      <app-job-ops-show [job]="oneJob"></app-job-ops-show>
     </div>
   </div>
   <br>
