--- a/frontend/src/app/machine/machine-new/machine-new.component.html
+++ b/frontend/src/app/machine/machine-new/machine-new.component.html
@@ -1,54 +1,55 @@
 <div *ngIf="!canInput">
   <h1>You must be logged in to add a machine lot!</h1>
+</div>
+<form *ngIf="canInput && machineForm" [formGroup]="machineForm" (ngSubmit)='onSubmit()' >
+<div class="form-group">
+  <label for="machine">Machine</label>
+  <input 
+    formControlName='machine'
+    id="machine" 
+    class="form-control"
+  >
+</div>
+<div *ngIf="auth.machType == 'lathe'">
+  <div class="form-group">
+    <label for="currentJob">Job</label>
+    <select
+      formControlName='currentJob'
+      type="text" 
+      id="currentJob" 
+      class="form-control"
+      (change)="changeOps($event.target.value)">
+      <option *ngFor = "let job of jobs">{{job}}</option>
+    </select>     
   </div>
-    <form *ngIf="canInput && machineForm" [formGroup]="machineForm" (ngSubmit)='onSubmit()' >
-    <div class="form-group">
-      <label for="machine">Machine</label>
-      <input 
-        formControlName='machine'
-        id="machine" 
-        class="form-control"
-      >
-    </div>
-    <div *ngIf="auth.machType == 'lathe'">
-      <div class="form-group">
-        <label for="currentJob">Job</label>
-        <select
-          formControlName='currentJob'
-          type="text" 
-          id="currentJob" 
-          class="form-control"
-          (change)="changeOps($event.target.value)">
-          <option *ngFor = "let job of jobs">{{job}}</option>
-        </select>     
-      </div>
-      <div class="form-group">
-        <label for="currentOp">Op</label>
-        <select
-          formControlName='currentOp'
-          type="text" 
-          id="currentOp" 
-          class="form-control">
-          <option *ngFor = "let op of ops">{{op}}</option>
-        </select>    
-      </div>
-    </div>
-      <br><br>
-      <button 
-        class="btn btn-success" 
-        type="submit"
-        [disabled]="!machineForm.valid"
-      >
-        Add Machine
-      </button>
-      <button 
-        type='button' 
-        class='btn btn-danger pull-right' 
-        (click)='onCancel()'
-      >
-        Cancel
-      </button>
-      <br><br>
-      <div *ngIf="isError" class="error">
-        <h3>{{error}}</h3>
-      </div>
+  <div class="form-group">
+    <label for="currentOp">Op</label>
+    <select
+      formControlName='currentOp'
+      type="text" 
+      id="currentOp" 
+      class="form-control">
+      <option *ngFor = "let op of ops">{{op}}</option>
+    </select>    
+  </div>
+</div>
+  <br><br>
+  <button 
+    class="btn btn-success" 
+    type="submit"
+    [disabled]="!machineForm.valid"
+  >
+    Add Machine
+  </button>
+  <button 
+    type='button' 
+    class='btn btn-danger pull-right' 
+    (click)='onCancel()'
+  >
+    Cancel
+  </button>
+  <br><br>
+  <div *ngIf="isError" class="error">
+    <h3>{{error}}</h3>
+  </div>
+</form>
