--- a/frontend/src/app/production/production-by-machine/production-mill-op/production-mill-op.component.html
+++ b/frontend/src/app/production/production-by-machine/production-mill-op/production-mill-op.component.html
@@ -12,7 +12,7 @@
 </div>
 <h4><br></h4>
 <div *ngIf="editMode">
-  <app-production-total (remainingQ)="emitRemains($event)" partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{jobNumber}}"></app-production-total>
+  <app-production-total partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{jobNumber}}"></app-production-total>
 </div>
 <div *ngIf="op.remainingQuantity && op.cycleTime">
   <h6 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h6>
