--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <hr>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-12 col-sm-offset-0 col-md-offset-0">
+    <div>
       <div routerLink='/'  class="right logo">
         <img src="../../assets/favicon.png" width="50px">
       </div>
