--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 
 <nav class='navbar navbar-default'>
-  <div class='container-fluid'>
+  <div class='container-fluid size-hold'>
       <div class='navbar-header'>
       </div>
       <div class='navbar-default'><strong>
