updated some border styling for production views

--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -37,13 +37,13 @@
   </button>
 </div>
 <div class="grid">
-  <div class="border"><h5 class="bold">{{days[0]}}</h5></div>
-  <div class="border"><h5 class="bold">{{days[1]}}</h5></div>
-  <div class="border"><h5 class="bold">{{days[2]}}</h5></div>
-  <div class="border"><h5 class="bold">{{days[3]}}</h5></div>
-  <div class="border"><h5 class="bold">{{days[4]}}</h5></div>
-  <div class="border"><h5 class="bold">{{days[5]}}</h5></div>
-  <div class="border"><h5 class="bold">{{days[6]}}</h5></div>
+  <div><h5 class="bold border">{{days[0]}}</h5></div>
+  <div><h5 class="bold border">{{days[1]}}</h5></div>
+  <div><h5 class="bold border">{{days[2]}}</h5></div>
+  <div><h5 class="bold border">{{days[3]}}</h5></div>
+  <div><h5 class="bold border">{{days[4]}}</h5></div>
+  <div><h5 class="bold border">{{days[5]}}</h5></div>
+  <div><h5 class="bold border">{{days[6]}}</h5></div>
   <div *ngFor="let date of firstDayOfMonth">
     <div class="border border-height">
     </div>
