--- a/frontend/src/app/production/production-by-machine/production-mill-job/production-mill-job.component.html
+++ b/frontend/src/app/production/production-by-machine/production-mill-job/production-mill-job.component.html
@@ -1,20 +1,22 @@
 <div *ngIf="ops.length > 0">
   <h3 class="bold">Part Number: {{job.partNumber}}</h3>
   <div class="grid">
-    <div class="border">
-      <h5>Job #:</h5>
-      <h5 class="bold">{{job.jobNumber}}</h5>
-      <div *ngIf="job.orderQuantity">
-          <h5>Ordered:</h5>
-          <h5 class="bold">{{job.orderQuantity}}</h5>
-      </div>
-      <div *ngIf="job.remainingQuantity">
-          <h5>Remaining:</h5>
-          <h5 class="bold">{{job.remainingQuantity}}</h5>
-      </div>
-      <h4><br></h4>
-      <div *ngIf="hours + minutes > 0">
-        <h6 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h6>
+    <div>
+      <div class="border">
+        <h5>Job #:</h5>
+        <h5 class="bold">{{job.jobNumber}}</h5>
+        <div *ngIf="job.orderQuantity">
+            <h5>Ordered:</h5>
+            <h5 class="bold">{{job.orderQuantity}}</h5>
+        </div>
+        <div *ngIf="job.remainingQuantity">
+            <h5>Remaining:</h5>
+            <h5 class="bold">{{job.remainingQuantity}}</h5>
+        </div>
+        <h4><br></h4>
+        <div *ngIf="hours + minutes > 0">
+          <h6 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h6>
+        </div>
       </div>
     </div>
     <div class="border" *ngFor="let op of ops">
