--- a/frontend/src/app/production/production-by-machine/production-mill-op/production-mill-op.component.html
+++ b/frontend/src/app/production/production-by-machine/production-mill-op/production-mill-op.component.html
@@ -1,6 +1,9 @@
-<h5>Op #:</h5>
-<h5 class="bold">{{op.opNumber}}</h5>
-<h4><br></h4>
+<h5>
+  Op #:
+  <strong>
+    {{op.opNumber}}
+  </strong>
+</h5>
 <h5>Parts To Date:</h5>
 <div *ngIf="!editMode">
   <div *ngIf="op.partsToDate">
@@ -10,7 +13,6 @@
     <h5 class="bold">0</h5>
   </div>
 </div>
-<h4><br></h4>
 <div *ngIf="editMode">
   <app-production-total partsToDate="{{op.partsToDate}}" opNumber="{{op.opNumber}}" jobNumber="{{jobNumber}}"></app-production-total>
 </div>
@@ -18,7 +20,6 @@
   <h6 class="bold">{{hours}} {{hourFormat}}<br>{{minutes}} {{minFormat}}<br>Remaining</h6>
 </div>
 <div class="grid">
-  <br>
   <button *ngIf="!editMode" class="btn btn-primary" (click)="changeEdit()">
     <h6 class="short">Update</h6>
   </button>
