changed how job editiing re-renders

--- a/frontend/src/app/job/job-show/job-show.component.html
+++ b/frontend/src/app/job/job-show/job-show.component.html
@@ -1,6 +1,6 @@
 <div class='grid' >
   <div class="set-width" *ngFor="let job of jobs"> 
-    <app-job-find-show [jobInput]="job"> </app-job-find-show>
+    <app-job-find-show [jobInput]="job" [callback]="updateEntry"> </app-job-find-show>
   </div>
 </div>
 <br>
